# business-dashboard-93868

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  playwright.config.ts  pyproject.toml  requirements.txt
.github/workflows/: aws-sample-deploy.yml  ci.yml
app/: __init__.py  main.py  streamlit_app.py
app/core/: config.py  errors.py  logging.py
app/db/: database.py  models.py  schemas.py  seed.py
app/routers/: __init__.py  batch.py  dashboard.py  deliveries.py  feedbacks.py  improvement_tasks.py  logs.py  products.py
app/services/: batch_service.py  dashboard_service.py  log_service.py
app/static/css/: styles.css
app/templates/: base.html  batch.html  dashboard.html  deliveries.html  feedbacks.html  logs.html  products.html  tasks.html
config/: config.yaml
docs/: ai_technology_research_note.md  architecture.md  linux_environment_setup.md  meeting_minutes_template.md  project-structure.md  setup.md  technical-design.md  validation_plan.md
infra/aws/: README.md  sample-architecture.yml
infra/db/: init.sql
reports/: ai_validation_report.md
screenshots/: README.md
scripts/: __init__.py  generate_report.py  generate_sensor_data.py
src/: __init__.py  utils.py
src/api/: main.py
src/data/: preprocess.py
src/models/: __init__.py  predict.py  train.py
tests/: conftest.py  test_api.py  test_batch.py  test_dashboard.py  test_data_generation.py  test_deliveries.py  test_error_handling.py  test_health.py  test_pages.py  test_predict.py  test_preprocess.py
tests/e2e/: screenshot.spec.ts
(+14 files in other folders)
